tests/baselines/reference/superCallInStaticMethod.errors.txt
tests/cases/compiler/superCallInStaticMethod.ts(30,23): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/superCallInStaticMethod.ts(37,23): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/superCallInStaticMethod.ts (2 errors) ====
    class Doing {
        public static staticMethod() {
        }
    }
    
    class Other extends Doing {
        // in static method
        public static staticMethod() {
            super.staticMethod();
        }
    
        // in a lambda inside a static method
        public static lambdaInsideAStaticMethod() {
            () => {
                super.staticMethod();
            }
        }
    
        // in an object literal inside a static method
        public static objectLiteralInsideAStaticMethod() {
            return {
                a: () => {
                    super.staticMethod();
                },
                b: super.staticMethod()
            };
        }
    
        // in a getter
        public static get staticGetter() {
                          ~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super.staticMethod();
    
            return 0;
        }
    
        // in a setter
        public static set staticGetter(value: number) {
                          ~~~~~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super.staticMethod();
        }
    
        // in static method
        public static initializerInAStaticMethod(a = super.staticMethod()) {
            super.staticMethod();
        }
    }
    